<resources>
    <string name="app_name">Mempo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="telephone">Telephone</string>
    <string name="dekorasi_atas">Dekorasi atas</string>
    <string name="dekorasi_bawah">Dekorasi bawah</string>
</resources>
